# ALC_rayleigh_calibration

./: .gitattributes  .gitignore  CLAUDE.md  README.md  instruments.json  options.json  pyproject.toml  requirements.txt  run_targeted_rayleigh.py  setup.py
.claude/: launch.json
calibration/: __init__.py  config.py  flags.py  incremental.py  main.py  plotting.py
calibration/cloud/: __init__.py  calibration.py
calibration/data/: standard_atmosphere_US_1976_50km.csv
calibration/io/: cams.py  data_loader.py  download_cams_beta.py  l1_window.py  output.py
calibration/omb/: __init__.py  cams_aerosol.py  figures.py  omb.py
calibration/rayleigh/: __init__.py  atmosphere.py  calibration.py  molecular_methods.py  rayleigh_fit.py
calibration/sensitivity/: __init__.py  detection.py  network.py  noise.py
calibration/water_vapor_correction/: __init__.py  water_vapor.py
doc/: E-Profile_calibration_method_description.txt  June09_0940_Vogelmann_Klett.txt  OPERATIONS.md  README.md  Report_Klett_method_implementation_E_Profile-2.txt  WATER_VAPOR_AUDIT.md  ao-62-4-861.txt
doc/reports/: DOCUMENTATION_VERIFICATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_COMPLETE.md  README.md  ROBUST_CALIBRATION_README.md  ambient_noise_report_20260529-30.md  attbsc_validation_technical.md  attbsc_wv_literature_review.md  calibration_coefficient_convention.md  calibration_outliers_report.md  calibration_outliers_report_embedded.md  calibration_short_term_variability_report.md  calibration_stability_report.md  cl61_calibration_verification_report.md  cloud_optimization_report.md  ewc_dashboard_deployment.md  l1_2026_variability_report.md  l1_2026_variability_report_embedded.md  l1_vs_l2_validation.md  method_comparison_multisite.docx  method_comparison_multisite.md  molecular_methods_longrun_report.md  molecular_methods_longrun_report_embedded.md  molecular_window_detection_methods_report.md  molecular_window_detection_methods_report_embedded.md  network_v2_vs_v11_report.docx  network_v2_vs_v11_report.md  paper_python_validation.md  payerne_cl61_calibration_sensitivity.md  payerne_cl61_wv_sensitivity.md  precision_longrun.md  ranking_robust_longrun.md  rayleigh_network_diagnosis_report.md  rayleigh_network_diagnosis_report_embedded.md  v2_optimization_report.md  wv_fwhm_literature_review.md  wv_wavelength_sensitivity.md
examples/: 01_calibration_quickstart.ipynb  01_rayleigh_calibration_quickstart.ipynb  02_molecular_model_offline.ipynb  03_sample_data_calibration.ipynb  README.md
examples/data/: README.md
lost_and_found/: README.md  _make_lindenberg_report_figs.py  _prof.py  _res.py  count_flags_payerne.py  plot_cl_timeseries.py  run_camsmol_payerne.py  run_cl61_rayleigh_nightwindow.py  run_cl61_rayleigh_params.py  run_cl61_sza_test.py  run_rayleigh_diag_dates.py  select_nights.py  select_nights_site.py  sweep_gates_payerne.py
monitoring/: __init__.py  charts.py  config.py  index.py  kalman.py  metrics.py  render.py
monitoring/static/: diag.js  filter.js  histlink.js  paginate.js  qcflag.js  search.js  style.css  table-sort.js
monitoring/templates/: base.html  flags.html  station.html  summary.html
ops/: README.md  config.sh  delete_local_diag.sh  ewc_bucket_policy.json  ops_daily.py  prefetch_cams.sh  publish.sh  run_daily.sh  switch_v13_to_v102.sh
rayleigh_calibration/: __init__.py  atmosphere.py  calibration.py  config.py  data_loader.py  main.py  output.py  plotting.py  rayleigh_fit.py  water_vapor.py
scripts/: README.md  build_dashboard.py  calibrate_cloudnet_cl61.py  diagnose_cbh_integration.py  extract_l2_opcoeff.py  make_flag_examples.py  prefetch_cams.py  refresh_census.py  run_all_l1_2026.py  run_all_l2monthly.py  run_all_loop.ps1  run_calibration.py  run_lindenberg_cl61_cal.py  run_targeted_rayleigh.py
tests/: test_all_instruments_run.py  test_calibration.py  test_cams_download.py  test_cloud_calibration_vs_matlab.py  test_dashboard.py  test_methods_smoke.py  test_sample_data.py  test_transmission_correction.py  test_water_vapor.py
validation/: README.md  analyze_cloud_avg.py  analyze_cloud_sweep.py  analyze_fullcal.py  analyze_network.py  analyze_rayleigh_diag.py  analyze_v2_sweep.py  cl61_cloud_vs_rayleigh.py  cloud_l1_l2_analyze.py  cloud_l1_l2_native.py  cloud_yield_analyze.py  cloud_yield_experiment.py  cloud_yield_plot_timeseries.py  cloud_zero_investigate.py  compare_daily.py  compare_lindenberg_chm_cl61.py  compare_matlab_python.py  compare_molecular_methods.py  embed_report.py  fig_lindenberg_cl61.py  fig_rayleigh_l1l2.py  longrun_methods.py  make_optimal_flowchart.py  md_to_docx.py  outliers_timeseries.py  plot_cl_timeseries_site.py  precision_longrun.py  rayleigh_l1_grid_check.py  reaggregate_longrun.py  reproduce_report.py  run_cl61_cloud_l1_2026.py  run_cl61_variants.py  run_cloud_avg_sweep.py  run_cloud_sweep.py  run_eprof_v10.py  run_l1_2026_variability.py  run_network_v2_vs_v11.py  run_rayleigh_diag_light.py  run_rayleigh_diag_payerne.py  run_rayleigh_diagnostics.py  (+11 more)
(+40 files in other folders)
