[project]
name = "eprofile-calibration"
version = "2.0.0"
description = "Rayleigh and liquid-cloud calibration for automated lidars and ceilometers (E-PROFILE)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "E-PROFILE", email = "contact@e-profile.eu" }]
keywords = ["lidar", "ceilometer", "calibration", "rayleigh", "cloud", "atmospheric", "remote sensing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "netCDF4>=1.5",
]

[project.optional-dependencies]
plotting = ["matplotlib>=3.4"]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0", "ruff>=0.1"]

[project.scripts]
eprofile-calibration = "calibration.main:main"

[project.urls]
Homepage = "https://e-profile.eu"

# ---------------------------------------------------------------------------
# Build backend (uv-compatible). Install with:  uv pip install -e ".[plotting]"
# ---------------------------------------------------------------------------
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["calibration"]

[tool.hatch.build.targets.sdist]
include = ["calibration", "tests", "README.md"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "NPY",   # NumPy-specific rules
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in default argument (needed for dataclass defaults)
]

[tool.ruff.isort]
known-first-party = ["calibration"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "netCDF4.*",
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage is opt-in (run `pytest --cov=calibration`) so the suite runs without pytest-cov.
addopts = "-v"
